# KoolKernels

./: .gitignore  README.md
PMPP_exercises/: Chapter2.ipynb  Chapter3.ipynb  Chapter4.ipynb  Chapter5.ipynb
scripts/: cuda_check.sh  cuda_test  cuda_test.cu
src/: CMakeLists.txt  deviceProperties.cpp  readCSV.cpp
src/data/: df1_100.csv  df2_100.csv
src/matMul/: cat2vec.py  iterative_improvements.ipynb  kernel_test.py  main.cu  naiveMatMul.cu  tiledMatMul.cu  torchExtension.cpp
src/vecAdd/: 1. vecAdd.cpp  main.cu  vecAdd.cu
